--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
           </a>
         </div>
         <h3 class="title">Sobre nós</h3>
-        <h5 class="description">Criadas por estudantes de Sistemas de Informação em seu 4° Semestre.<br>
-          Ambos com experiências em criação de Sites, aplicativos Web e desenvolvimento em geral.
-          Dentre inúmeras linguagens de programação, mas nossas especialidade é criação de Sites, em principal Landing Pages
+        <h5 class="description">Criadas por estudante de Sistemas de Informação em seu 4° Semestre.<br>
+          Com experiências em criação de Sites, aplicativos Web e desenvolvimento em geral.
+          Dentre inúmeras linguagens de programação, mas minha especialidade é criação de Sites, em principal Landing Pages
           com captura de Leads, e-mail, nomes, números e afins.
-          Veja abaixo alguns dos nossos trabalhos.
+          Veja abaixo alguns dos meus trabalhos.
         </h5>
         <div class="row">
           <div class="col-md-6 ml-auto mr-auto">
@@ -132,7 +132,6 @@
               <div class="col-md-10 ml-auto mr-auto">
                 <div class="row collections">
                   <div class="col-md-6">
-                    <a href="https://pearldigital02.netlify.app/"><img src="./assets/img/ex1.png" alt="" class="img-raised"></a>
                     <a href="#"><img src="./assets/img/ex4.png" alt="" class="img-raised"></a>
                   </div>
                   <div class="col-md-6">
