--- a/sobrenos.html
+++ b/sobrenos.html
@@ -107,11 +107,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">Quem somos?</h2>
-                        <h5 class="description">Trabalhamos com criação de Sites, de Landing Pages a
+                        <h2 class="title">Quem sou?</h2>
+                        <h5 class="description">Trabalho com criação de Sites, de Landing Pages a
                             um pouco mais complexos, somente estático, podemos realizar o salvamento de dados, como
                             captura de leads, e-mail e afins.
-                            Futuramente, começaremos a criação de aplicativos mobile, se tiver uma demanda entre em
+                            Futuramente, começarei a criação de aplicativos mobile, se tiver uma demanda entre em
                             contato, negociaremos da melhor forma, mais rápida entrega e o menor preço de mercado.
                         </h5>
                     </div>
@@ -161,21 +161,7 @@
                                         class="fab fa-linkedin"></i></a>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="team-player text-center">
-                                <img src="./assets/img/junio.jfif" alt="Thumbnail Image"
-                                    class="rounded-circle img-fluid img-raised">
-                                <h4 class="title">Janailson Junio</h4>
-                                <p class="category text-primary">Desenvolvedor</p>
-                                <p class="description">Possuo experiencia em criação de sites para lojas, com criação de páginas para produtos e carrinhos, como pode ver em
-                                    <a href="#">portifolio</a> e se desejar mais informações sobre entre em contato abaixo.</p>
-                                <a href="https://www.instagram.com/junio_sm/" class="btn btn-primary btn-icon btn-round"><i
-                                        class="fab fa-instagram"></i></a>
-                                <a href="https://github.com/juniosm" class="btn btn-primary btn-icon btn-round"><i
-                                        class="fab fa-github"></i></a>
-                            </div>
-                        </div>
-
+                    
                     </div>
                 </div>
             </div>
